# mealie-scripts

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
configs/: config.json
configs/taxonomy/: categories.json  cookbooks.json  tags.json
scripts/docker/: entrypoint.sh
scripts/install/: README.md  ubuntu_setup_mealie.sh  windows_setup_mealie.ps1
scripts/python/mealie/: README.md  audit_taxonomy.py  categorizer_core.py  recipe_categorizer_chatgpt.py  recipe_categorizer_ollama.py  taxonomy_manager.py
src/mealie_organizer/: __init__.py  categorizer_core.py  config.py  cookbook_manager.py  recipe_categorizer.py  recipe_categorizer_chatgpt.py  recipe_categorizer_ollama.py  taxonomy_manager.py
src/mealie_scripts/: audit_taxonomy.py  categorizer_core.py  config.py  recipe_categorizer_chatgpt.py  recipe_categorizer_ollama.py  taxonomy_manager.py
tests/: test_categorizer_core.py  test_cookbook_manager.py  test_recipe_categorizer.py  test_taxonomy_manager.py
